--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Document</title>
+        <title>Odin Recipes</title>
     </head>
     <body>
-        
+        <h1>Odin Recipes</h1>
+        <a href="recipes/buffalo-chicken-and-potatoes.html">Buffalo Chicken and Potatoes</a>
     </body>
 </html>
