Add buffalo chicken recipe page content
The page contains a picture of the completed meal; a description; an ingredient list; and a steps list.

--- a/recipes/buffalo-chicken-and-potatoes.html
+++ b/recipes/buffalo-chicken-and-potatoes.html
@@ -6,5 +6,33 @@
     </head>
     <body>
         <h1>Buffalo Chicken and Potatoes</h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVceAGgXlXhiaP4xBbi1-MU6_uTZBkg4yz3w&s" alt="A bowl of buffalo chicken and potatoes">
+        <h2>Description</h2>
+        <p>
+            A high protein, low calorie buffalo chicken potato bowl for meal prepping.
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>750g Raw Chicken Breast</li>
+            <li>Raw White Potatoes</li>
+            <li>Salt</li>
+            <li>Parsley</li>
+            <li>Garlic Powder</li>
+            <li>Cumin</li>
+            <li>Smoked Paprika</li>
+            <li>Olive Oil</li>
+            <li>Buffalo Hot Sauce</li>
+            <li>Light Butter</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Cut raw chicken into small cubes</li>
+            <li>Season with salt, parsley, garlic powder, cumin, smoked paprika, and olive oil</li>
+            <li>Melt butter in a pan and cook the chicken until golden and charred</li>
+            <li>Melt more butter and add buffalo hot sauce</li>
+            <li>Cut potatoes into small cubes</li>
+            <li>Season with salt, parsley, garlic powder, cumin, smoked paprika, and olive oil</li>
+            <li>Place the potatoes into the oven for 20 minutes at 395 degrees</li>
+        </ol>
     </body>
 </html>
