Add more recipes
Added a protein cereal and PBJ sandwich recipe and linked them to index.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/buffalo-chicken-and-potatoes.html">Buffalo Chicken and Potatoes</a>
+        <ul>
+            <li><a href="recipes/buffalo-chicken-and-potatoes.html">Buffalo Chicken and Potatoes</a></li>
+            <li><a href="recipes/protein-cereal.html">Protein Cereal</a></li>
+            <li><a href="recipes/peanut-butter-and-jelly-sandwich.html">Peanut Buter and Jelly Sandwich</a></li>
+        </ul>
     </body>
 </html>
